[package]
name = "rust_mysqldump"
version = "0.1.1"
edition = "2021"
authors = ["Tom Shaw <dev@tomshaw.us>"]
description = "A command-line application for quickly backing up your MySQL databases."
license = "MIT"
documentation = "https://docs.rs/rust_mysqldump"
homepage = "https://github.com/tomshaw/rust-mysqldump"
repository = "https://github.com/tomshaw/rust-mysqldump"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
mysql = "25.0"
colored = "2.0.4"
cli-table = "0.4.7"
flate2 = "1.0"
gzp = { version = "*", default-features = false, features = ["deflate_rust"] }
