[package]
name = "rust_mysqldump"
version = "0.1.1"
edition = "2021"
description = "A command-line application for quickly backing up your MySQL/MariaDB databases."
license = "MIT"
documentation = "https://docs.rs/rust_mysqldump"
homepage = "https://github.com/MGSousa/rust-mysqldump"
repository = "https://github.com/MGSousa/rust-mysqldump"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
mysql = "25.0"
colored = "2.0.4"
cli-table = "0.4.7"
flate2 = "1.0"
gzp = { version = "*", default-features = false, features = ["deflate_rust"] }
